[gd_scene load_steps=4 format=2]

[ext_resource path="res://Menus/Mainmenu.gd" type="Script" id=1]
[ext_resource path="res://Menus/titlescreen.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/BasicFont.tres" type="DynamicFont" id=3]

[node name="Mainmenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblVersion" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.41418
margin_right = -10.0
margin_bottom = -8.58582
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.215686, 0.215686, 0.215686, 1 )
text = "Version: "
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 950.0
margin_top = 290.0
margin_right = 1173.0
margin_bottom = 532.0
rect_min_size = Vector2( 200, 200 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnNewGame" type="Button" parent="VBoxContainer"]
margin_right = 223.0
margin_bottom = 57.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "New Game"
flat = true
align = 2

[node name="btnContinue" type="Button" parent="VBoxContainer"]
margin_top = 61.0
margin_right = 223.0
margin_bottom = 118.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "Continue"
flat = true
align = 2

[node name="btnOptions" type="Button" parent="VBoxContainer"]
margin_top = 122.0
margin_right = 223.0
margin_bottom = 179.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "Options"
flat = true
align = 2

[node name="btnQuit" type="Button" parent="VBoxContainer"]
margin_top = 183.0
margin_right = 223.0
margin_bottom = 241.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Quit"
flat = true
align = 2

[connection signal="pressed" from="VBoxContainer/btnNewGame" to="." method="_on_btnNewGame_pressed"]
[connection signal="pressed" from="VBoxContainer/btnContinue" to="." method="_on_btnContinue_pressed"]
[connection signal="pressed" from="VBoxContainer/btnOptions" to="." method="_on_btnNewGame_pressed"]
[connection signal="pressed" from="VBoxContainer/btnQuit" to="." method="_on_btnQuit_pressed"]
